Coverity analysis defect 153859: Data race condition

XMLWordPrintableJSON

    • Catalog and Routing
    • Fully Compatible
    • ALL
    • CAR Team 2025-09-01
    • 2
    • None
    • 3
    • TBD
    • 🟥 DDL
    • None
    • None
    • None
    • None
    • None
    • None

      Data race condition

      The value of the shared data will be determined by the interleaving of thread execution. Thread shared data is accessed without holding an appropriate lock, possibly causing a race condition
      /src/mongo/db/s/sharding_ddl_coordinator_service.cpp:290: MISSING_LOCK 153859 Accessing "this->this" without holding lock "mongo::ShardingDDLCoordinatorService._mutex". Elsewhere, "mongo::ShardingDDLCoordinatorService::_rebuildService(std::shared_ptr<mongo::executor::ScopedTaskExecutor>, mongo::CancellationToken const &)::[lambda() (instance 1)].this" is written to with "ShardingDDLCoordinatorService._mutex" held 1 out of 1 times.

              Assignee:
              Silvia Surroca
              Reporter:
              Coverity Collector User
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: