SERVER-108879 Coverity analysis defect 153859: Data race condition (#40294)

GitOrigin-RevId: 851bfe26342fd0ac8d527b5d8c711a6d75ec6ec9