src/mongo/db/global_catalog/ddl/sharding_ddl_coordinator_service.h
@@ -143,7 +143,7 @@ private:
 
     size_t _countActiveCoordinators(
         std::function<bool(DDLCoordinatorTypeEnum, boost::optional<FCV>)> pred) const;
-    size_t _countCoordinatorDocs(OperationContext* opCtx);
+    size_t _countCoordinatorDocs(OperationContext* opCtx) const;
 
     void _transitionToRecovered(WithLock lk, OperationContext* opCtx);
 
